# GPUSAT

./: .gitignore  CMakeLists.txt  Makefile  README.md  startBenchmarks.sh  test50-12-9-q.cnf  testsimple.cnf
include/: CLI11.hpp  CutSetFitnessFunction.h  d4_kernel.h  d4_utils.h  decomposer.h  double_kernel.h  gpusat.h  gpusat_types.h  gpusatparser.h  gpusatpreprocessor.h  gpusatutils.h  gpusautils.h  kernel.h  kernels.h  main.h  parser.h  satparser.h  solver.h  treeparser.h  types.h  utils.h
include/FitnessFunctions/: CutSetFitnessFunction.h  CutSetWidthFitnessFunction.h  JoinSizeFitnessFunction.h  NumJoinFitnessFunction.h  WidthCutSetFitnessFunction.h  WidthFitnessFunction.h
kernel/: SAT.cl  SAT_d.cl  SAT_d4_dual.cl  SAT_d4_inci.cl  SAT_d4_primal.cl  SAT_d_dual.cl  SAT_d_inci.cl  SAT_d_primal.cl  kernel.cl  minSAT.cl
lib/: libhtd.so.0  libhtd_cli.so.0  libhtd_cli.so.0.0.0  libhtd_io.so.0  libhtd_io.so.0.0.0
problems/decomposition/: sat_1.td  sat_1_.td  sat_2.td  sat_2_.td
problems/formula/: sat_1.cnf  sat_2.cnf
problems/graph/: sat_1.gr  sat_2.gr
script/: CommonMethods.py  Summary.R  Summary.Rmd  checkFormula.py  convertSatToASP.py  convertSatToQBF.py  genDecomp.py  genSATFormulas.py  genTestCases.py  genincidence.py  genprimal.py  getAllStats.sh  getAllStats_Cobra.sh  getAllStats_Hermann.sh  getFormulas.py  getGraphs.py  getModels.py  getModelsRaw.py  getNumsharpSATSolved.py  getStats.py  preprocCases.py  preprocessFormula.py  processBenchmark.py  reprocessBenchmark.py  testProgram.py  testProgram_old.py
scripts/: genPlots.py  genincidence.py  genprimal.py
src/: .gpusatpreprocessor.cpp.swp  CutSetFitnessFunction.cpp  alloc.cpp  alloc.h  d4_utils.cpp  decomposer.cpp  decomposer.h  gpusat.cpp  gpusatparser.cpp  gpusatparser.h  gpusatpreprocessor.cpp  gpusatpreprocessor.h  gpusatutils.cpp  gpusatutils.h  gpusautils.cpp  kernel.cu  kernel.h  main.cpp  parser.cpp  satparser.cpp  solver.cpp  solver.h  treeparser.cpp  types.cpp  types.h  utils.cpp
src/FitnessFunctions/: CutSetFitnessFunction.cpp  CutSetWidthFitnessFunction.cpp  JoinSizeFitnessFunction.cpp  JoinSizeFitnessFunction.h  NumJoinFitnessFunction.cpp  WidthCutSetFitnessFunction.cpp  WidthCutSetFitnessFunction.h  WidthFitnessFunction.cpp
src/cli/: main.cpp
